# dnacenter-jenkins-tutorial

./: Jenkinsfile  LICENSE  README.md  areas.py  cli_templates.py  dnac.py  pyproject.toml  requirements.txt  sites.py
config/: cli_templates.yaml  sites.yaml
deploy/: dnac.yaml  hosts.csv  template.j2
templates/: template.j2  template_with_params.j2
test/: hosts  template.j2
